--- a/index.html
+++ b/index.html
@@ -3,9 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JS Messaround</title>
 </head>
 <body>
-    
+    <h1>Let's learn Javascript!</h1>
+    <h2>How do we do onclick events and alerts on an anchor?</h2>
+
+    <a href = "https://www.youtube.com" target="_blank"
+    onclick = "alert('Warning! You are leaving the website!')"> Youtube page</a>
+
+    <hr>
+    <h2>How do we display and hide text</h2>
+    <h2>What's my secret identiy?</h2>
+    <p id="secret"></p>
+    <button onclick="
+    document.getElementById('secret').innerHTML='nana nana nana nana, Batman!';
+    document.getElementById('secret').style.display='block'
+    ">Reveal!</button>
+
+    <button onclick="document.getElementById('myImage').src='images/lightoff.jpg'">Bulb Off</button>
+
+    <h2>How do we change an image in Javascript?</h2>
+    <img src="images/lighton.jpg" id="myImage" style="height: 200px; width: 200px;">
+
+    <button onclick="document.getElementById('myImage').src='images/lightoff.jpg'">Bulb Off</button>
+
+    <h2>How do we chaage styles with a button</h2>
+    <p id="alice">Hi. I am alice</p>
+
+    <button onclick="document.getElementById('alice').style.color='blue';
+        document.getElementById('alice').style.fontSize='5px'">Cake. Eat me</button>
+
+    <button onclick="document.getElementById('alice').style.color='red';
+        document.getElementById('alice').style.fontSize='50px'">Potion. Drink me</button>
+
+<!--class assignment-->
+     <button onclick="document.getElementById('myImage').src='images/lighton.jpg'">Bulb On</button>
+   
+     <button onclick="document.getElementById('myImage').src='images/lighton.jpg'">Bulb On</button>
+
+     <!--individual challenges-->
+<button type="button" onclick="myFunction()">Set background color</button>
+
+<script>
+function myFunction() {
+  document.body.style.backgroundColor = "pink";
+}
+</script>
+
+
+<script>
+function myFunction1() {
+  document.getElementById("myDiv").style.border = "thick solid #0000FF";
+}
+</script>
+
+
+<div id="myDiv">This is a div element.</div>
+<br>
+<button type="button" onclick="myFunction1()">Set border</button>
+
+
 </body>
 </html>
